# cleantube

./: .gitignore  README.md  cleantube.example.toml  cleantube.toml  pyproject.toml  requirments.md  subscriptions.txt
cleantube/: __main__.py  config.py  daemon.py  db.py  logging_setup.py  status.py  subscriptions.py  web.py  ytdlp.py
cleantube/webui/: app.js  index.html  style.css
tests/: test_config.py  test_daemon.py  test_db.py  test_subscriptions.py  test_web.py  test_ytdlp.py
